--- a/Bayesian Statistics - Techniques and Models/Week2.Rmd
+++ b/Bayesian Statistics - Techniques and Models/Week2.Rmd
@@ -39,11 +39,12 @@ $$q(\theta^*|\theta_{i-1}) = \frac{1}{\sqrt{2 \pi}} \exp{[-0.5(\theta^* - \theta
 The "size" of the random walk step can affect acceptance (and thus convergence) rate. A high acceptance rate is not a good sign here. If random walk is taking too small of steps, it will accept candidate more often but will take a long time to fully explore the space. If it is taking too large of steps, many proposals will have low probabilities which leads to a low acceptance rate. This amounts to "wasted" samples. Ideally, a random walk sampler should have an acceptance rate between 23% and 50%.  
 
 
-$\qquad$ *Example*: Suppose $y_i | \mu \stackrel{iid}{\sim} N(\mu, 1)$ for $i=1, \dots,n$ and $\mu \sim t(0,1,1)$. We want to sample from the posterior distribution $p(\mu | y_1, \dots, y_n)$, which we can show is proportional to $\frac{\exp[n(\overline{y} \mu - \mu^2/2) ]}{1 + \mu^2}$
+$\qquad$ *Example*: Suppose $y_i | \mu \stackrel{iid}{\sim} N(\mu, 1)$ for $i=1, \dots,n$ and $\mu \sim t(0,1,1)$. We want to sample from the posterior distribution $p(\mu | y_1, \dots, y_n)$, which we can analytically show is proportional to
+$$g(\mu) :=  \frac{\exp[n(\overline{y} \mu - \mu^2/2) ]}{1 + \mu^2}$$
 
 ```{r}
 # using log(g(x)) instead of g(x) for numerical stability
-log_g = function(mu, n, ybar) {
+LOGg = function(mu, n, ybar) {
   n * (ybar * mu - mu^2 / 2) - log(1 + mu^2)
 }
 ```
@@ -52,26 +53,28 @@ log_g = function(mu, n, ybar) {
 metropolis_hastings = function(n, ybar, n_iter, mu_init, cand_sd) {
   # Random-Walk Metropolis-Hastings algorithm
   
-  # step 1
+  # initializations
   mu_out = numeric(n_iter)
   n_accept = 0
+  
+  # step 1
   mu_now = mu_init
-  lg_now = log_g(mu=mu_now, n=n, ybar=ybar)
+  LOGg_now = LOGg(mu=mu_now, n=n, ybar=ybar)
   
   for (i in 1:n_iter) {
     # step 2a
     mu_cand = rnorm(1, mean=mu_now, sd=cand_sd) # draw candidate
     
     # step 2b
-    lg_cand = log_g(mu=mu_cand, n=n, ybar=ybar)
-    lg_alpha = lg_cand - lg_now
-    alpha = exp(lg_alpha)
+    LOGg_cand = LOGg(mu=mu_cand, n=n, ybar=ybar)
+    LOGalpha = LOGg_cand - LOGg_now
+    alpha = exp(LOGalpha)
     
     u = runif(1) # less than alpha with prob min(1, alpha)
     if (u < alpha) { # accept candidate
-      mu_now = mu_cand
       n_accept = n_accept + 1
-      lg_now = lg_cand
+      mu_now = mu_cand
+      LOGg_now = LOGg_cand
     }
     
     mu_out[i] = mu_now
@@ -126,11 +129,16 @@ str(post)
 traceplot(as.mcmc(post$mu))
 
 post$mu_keep = post$mu[-c(1:100)] # discard the first 100 samples
-plot(density(post$mu_keep, adjust=2), main="", xlim=c(-1, 3), xlab=expression(mu)) # plot estimated posterior distribution
+str(post)
+
+plot(density(post$mu_keep, adjust=2), main="", xlim=c(-1, 3), xlab=expression(mu))
+# plot estimated posterior distribution
+
 curve(dt(x=x, df=1), lty=2, add=TRUE) # prior for mu
 points(ybar, 0, pch=19) # sample mean
 
-curve(0.017*exp(log_g(mu=x, n=n, ybar=ybar)), from=-1, to=3, add=TRUE, col="blue") # approximation to the true posterior in blue
+curve(0.017*exp(LOGg(mu=x, n=n, ybar=ybar)), from=-1, to=3, add=TRUE, col="blue")
+# approximation to the true posterior in blue
 ```
 
 
