--- a/Bayesian Statistics - Techniques and Models/Week2.Rmd
+++ b/Bayesian Statistics - Techniques and Models/Week2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Coursera Notes for Bayesian Statistics: Techniques and Models'
 author: "Jordan Katz"
-date: "June 1, 2020"
+date: "June 2, 2020"
 output: pdf_document
 ---
 
@@ -141,10 +141,98 @@ curve(0.017*exp(LOGg(mu=x, n=n, ybar=ybar)), from=-1, to=3, add=TRUE, col="blue"
 # approximation to the true posterior in blue
 ```
 
+\newpage
+### JAGS Software
 
-### JAGS
+1. Specify the model
+2. Set up the model
+3. Run the MCMC sampler
+4. Post processing
+
+(using same example as above)
+```{r}
+library("rjags")
+set.seed(50)
+
+# 1.
+mod_string = "model {
+  for (i in 1:n) {
+    y[i] ~ dnorm(mu, 1.0/sig2)
+  }
+  mu ~ dt(0.0, 1.0/1.0, 1)
+  sig2 = 1.0
+}"
+
+# 2.
+y = c(1.2, 1.4, -0.5, 0.3, 0.9, 2.3, 1.0, 0.1, 1.3, 1.9) # data
+n = length(y)
+
+data_jags = list(y=y, n=n)
+params = c("mu")
+
+inits = function() {
+  inits = list("mu"=0.0)
+}
+
+mod = jags.model(textConnection(mod_string), data=data_jags, inits=inits)
+
+# 3. 
+update(mod, 500)
+mod_sim = coda.samples(model=mod,
+                       variable.names=params,
+                       n.iter=1000)
+
+# 4.
+library("coda")
+summary(mod_sim)
+plot(mod_sim)
+```
 
 
+\newpage
+### Gibbs Sampling
+Question: What happens if we want a posterior distribution of multiple parameters?
+
+Say we want to know $p(\theta, \phi | y)$ but we only know $g(\theta,\phi)$ where $p(\theta, \phi | y) \propto g(\theta,\phi)$.
+
+By the chain rule of probability we have
+$$
+p(\theta | \phi, y) = \frac{ p(\theta, \phi | y) }{ p(\phi | y) }
+                    \propto p(\theta, \phi | y)
+                    \propto g(\theta,\phi)
+$$
+and by a similar analysis,
+$$
+p(\phi | \theta, y) \propto g(\theta, \phi)
+$$
+
+
+Main idea: iterate, taking turns drawing $\theta$ and $\phi$ one at a time, using the $g$ function.
+
+$\qquad$*Algorithm:*
+
+1. Initialize $\theta_0, \phi_0$
+2. For $i=1, \dots, m$ repeat:
+    a. Using $\phi_{i-1}$, draw $\theta_i \sim p(\theta | \phi_{i-1},y)$
+    b. Using $\theta_i$, draw $\phi_i \sim p(\phi | \theta_i, y)$  
+    results in a pair $(\theta_i, \phi_i)$
+  
+  
+Note how this can be naturally extended to more than two parameters.
+
+$\qquad$ *Example*: Suppose we have
+\begin{align*}
+y_i | \mu, \sigma^2 &\stackrel{iid}{\sim} N(\mu, \sigma^2), \qquad i=1,\dots,m \\
+\mu &\sim N(\mu_0, \sigma_0) \\
+\sigma^2 &\sim IG(\nu_0, \beta_0)
+\end{align*}
+
+
+\begin{align*}
+p(\mu,\sigma^2 | y_1, \dots, y_n)
+&\propto p(y_1, \dots, y_n | \mu, \sigma^2) p(\mu) p(\sigma^2) \\
+&=
+\end{align*}
 
 
 
